# hello-qvariant

./: CMakeLists.txt  main.cpp  message.cpp  message.h  note.cpp  note.h
